<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:title="@string/liked"
        android:id="@+id/menu_liked"
        app:showAsAction="ifRoom|withText"
        />

</menu>