...
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Title"
            android:id="@+id/article_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="Abstract"
            android:id="@+id/article_abstract"
...
